# printable

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/blender-worker/: Dockerfile  pyproject.toml
apps/blender-worker/scripts/: contract_check.py  smoke.py
apps/blender-worker/src/: blender_process.py  blender_script.py  main.py  operations.py  render.py  safety.py  schemas.py  sessions.py  storage.py
apps/indexer/: package.json  tsconfig.json
apps/indexer/src/: build-index.ts  download-slice100k.ts  embed.ts  index.ts  manifest.ts  paths.ts  siglip.ts  stl.ts  types.ts
apps/indexer/src/search/: cli.ts  index.ts
apps/web/: next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/app/: layout.tsx  page.tsx
apps/web/src/app/billing/: page.tsx
apps/web/src/app/impressum/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/privacy/: page.tsx
apps/web/src/app/setup/: SetupWizard.tsx  page.tsx
apps/web/src/app/signup/: SignupClient.tsx  page.tsx
apps/web/src/app/terms/: page.tsx
apps/web/src/components/: Workspace.tsx
apps/web/src/components/chat/: ChatPanel.tsx  Composer.tsx  Message.tsx  ProjectSwitcher.tsx
apps/web/src/lib/: utils.ts
apps/web/src/platform/: BrandMark.tsx  ai.ts  analytics.ts  app-config.ts  billing.test.ts  billing.ts  config.ts  index.ts  mode.ts  storage.ts
docs/: research-blender-worker.md  research-claude-sdk.md  research-corpus.md
(+60 files in other folders)
