[project]
name = "printable-blender-worker"
version = "0.0.1"
description = "Headless Blender HTTP service for Printable"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.39",
    "pydantic>=2.12",
    "httpx>=0.28",
    "numpy>=2.3",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=0.25",
    "ruff>=0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
